# bsdiff-update

./: README.md  build.sh  build_mac.sh  build_windows.bat  signature.jks
bsdiff/: README.txt
bsdiff_android/bzip2/: bzip2.c  bzip2recover.c
new_app/app/: build.gradle
new_app/app/src/main/: AndroidManifest.xml
new_app/gradle/wrapper/: gradle-wrapper.properties
original_app/: settings.gradle
original_app/app/: build.gradle
original_app/app/src/main/: AndroidManifest.xml
original_app/app/src/main/cpp/: CMakeLists.txt  launch.cpp
original_app/app/src/main/cpp/bsdiff/: bspatch.c
original_app/app/src/main/cpp/bsdiff/bzip2/: blocksort.c  bzlib_private.h
original_app/app/src/main/java/com/example/chenjimou/: FTPUtils.java  FtpUtils.java  MainActivity.java  PatchUtils.java
original_app/app/src/main/res/layout/: activity_main.xml
original_app/app/src/main/res/values/: strings.xml  themes.xml
original_app/app/src/main/res/values-night/: themes.xml
original_app/app/src/main/res/xml/: file_paths.xml
original_app/gradle/wrapper/: gradle-wrapper.properties
outputs/: new-app-release.apk  original-app-debug.apk  original-app-release.apk  patch
